# AI-learns-to-drive

./: AiGrid.hpp  CMakeLists.txt  ColorMixer.hpp  E.cpp  README.md  canvas.h  car.h  car.hpp  controls.h  e  grid copy.h  grid.h  grid.hpp  main  main.cpp  map.cpp  map.h  map.hpp  mapCreator.cpp  mouseGrid.hpp  mousegrid.h  network.h  network.hpp  pallete.h  sensor.h  sensor.hpp  simulation.hpp  simulationCommands.hpp  tank.h  tank.hpp  ui.h  utils.h  utils.hpp
Advanced/: canvas.h  car.h  main  main.cpp  ui.h
Advanced -- Later/: main.cpp
Archive/: mousegrid copy.h
Simple/: car.h  grid.h  main  main.cpp  map.h  mousegrid.h  p  spaceship.h  tank.h  utils.h
Simple copy/: a.out  controls.h  grid.h  main  main.cpp  map.h  mousegrid.h  sensor.h
Simple copy/json/E-mail - Ivan Velychko - Outlook_files/: cardmounter_without-react_e5ff857453a4654124be.js  default_cardmounter_distributionlistmembersblock_groupmembers.js  fluentui_without-react_9f113f298cf4daa83aba.js  fontsandiconspreloader_without-react_b087124a3f57d6cde69c.js  immersive-profile-components_without-react_717a22304218a92d91.js  immersiveprofile_without-react_280e61540c9cd05988b6.js  livepersonacardstrings_9cd8dda62cdf0e6efa99e5c46c8445d9abf8b8.js  loggingdependencies_151aa873e628feba8a27.js  me.js  owa.12730.css  owa.13031.css  owa.15386.js  owa.18326.css  owa.20053.js  owa.21091.css  owa.24636.css  owa.2537.css  owa.27060.css  owa.28208.css  owa.33191.css  owa.34806.css  owa.37127.css  (+27 more)
Simple/carTypes/: spaceship.h
Simple/json/: E-mail - Ivan Velychko - Outlook.html
src/: raygui.h  raylib.h  shell.html
(+38 files in other folders)
